feat(registry): add docker registry var

--- a/charts/slugrunner/Chart.yaml
+++ b/charts/slugrunner/Chart.yaml
@@ -3,5 +3,5 @@ home: https://github.com/deiscc/slugrunner
 version: <Will be populated by the ci before publishing the chart>
 description: Buildpack application runner for Deis Workflow.
 maintainers:
-  - name: Deis Team
+  - name: Deiscc Team
     email: engineering@deis.cc
